Adjust the veil to prevent readability-hindering clashes/overlays.

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -56,7 +56,7 @@ header {
         text-align: left;
         line-height: 1;
         margin: 0;
-        padding: 0 0.5em 0.25em 0.2em;
+        padding: 0 0.5em 0.45em 0.2em;
         margin-left: -0.2em;
 
         background: -moz-linear-gradient(top,  rgba(62,70,73,1) 0%, rgba(62,70,73,1) 61%, rgba(62,70,73,0.7) 87%, rgba(62,70,73,0) 100%); /* FF3.6+ */
@@ -140,7 +140,7 @@ body:after {
     content:  ' ';
     display: block;
     width: 100%;
-    height: 2em;
+    height: 2.2em;
     position: fixed;
     top: 0;
     left: 0;
